Added restapi point works in swagger with localhost
